Bug fixes.Added exception for each impl&controller